--- a/liquidi5-utils/package.json
+++ b/liquidi5-utils/package.json
@@ -1,16 +1,17 @@
 {
-  "name": "backend_",
+  "name": "my_ordinals_loan",
   "version": "1.0.0",
   "description": "",
-  "main": "POC_server.js",
+  "main": "server.js",
   "scripts": {
-    "start": "nodemon POC_server.js"
+    "start": "nodemon micro_services.js"
   },
   "keywords": [],
   "author": "Abishek J, Waheed",
   "license": "ISC",
   "dependencies": {
-    "@dfinity/agent": "^0.19.3",
+    "@dfinity/agent": "^1.4.0",
+    "@dfinity/principal": "^1.4.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2"
