--- a/liquidi5-front-end/package.json
+++ b/liquidi5-front-end/package.json
@@ -5,13 +5,15 @@
   "dependencies": {
     "@dfinity/agent": "^0.19.3",
     "@dfinity/principal": "^0.19.3",
+    "@junobuild/core": "^0.0.36",
     "@reduxjs/toolkit": "^1.9.7",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "@junobuild/core": "^0.0.36",
     "antd": "^5.10.1",
     "axios": "^1.5.1",
+    "buffer": "^6.0.3",
+    "gsap": "^3.12.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
